Fix `Class#newInstance` deprecation in `SnippetGenerator`